--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -18,8 +18,7 @@
   </p>
 	<br/>
 	<p>
-	<%= f.submit 'Add item' %>
+	<%= f.submit 'Add item' %>  |  <%= link_to 'Cancel', items_path %>  
   </p>
 <% end %>
 
-<% link_to 'Back', items_path %>
