--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,4 +13,4 @@
 	<%= @item.ends_on %>
 </p>
 
-<%= link_to 'Back', items_path %> | <%= link_to 'Cancel', items_path %>
+<%= link_to 'Back', items_path %>
