--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,21 @@
 <h1>Add an Item</h1>
 
 <%= form_for @item do |f| %>
+	
+	<% if @item.errors.any? %>
+	  <div id="error_explanation">
+	  	<h2>
+	  		<%= pluralize(@item.errors.count, "error") %>
+prohibited
+        this article from being saved:
+       </h2>
+       <ul>
+         <% @item.errors.full_messages.each do |msg| %>
+           <li><%= msg %></li>
+         <% end %>
+       </ul>
+    </div>
+  <% end %>
 
   <p>
 	<%= f.label :name %>
