Added the delete feature.

--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -33,7 +33,7 @@ prohibited
   </p>
 	<br/>
 	<p>
-	<%= f.submit 'Update item' %>  |  <%= link_to 'Cancel', items_path %>  
+	<%= f.submit %>  |  <%= link_to 'Cancel', items_path %>  
   </p>
 <% end %>
 
