--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,39 +1,5 @@
 <h1>Add an Item</h1>
 
-<%= form_for @item do |f| %>
+<%= render 'form' %>
 	
-	<% if @item.errors.any? %>
-	  <div id="error_explanation">
-	  	<h2>
-	  		<%= pluralize(@item.errors.count, "error") %>
-prohibited
-        this article from being saved:
-       </h2>
-       <ul>
-         <% @item.errors.full_messages.each do |msg| %>
-           <li><%= msg %></li>
-         <% end %>
-       </ul>
-    </div>
-  <% end %>
-
-  <p>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-  </p>
-	<br/>
-	<p>
-	<%= f.label :description %>
-	<%= f.text_area :description %>
-  </p>
-	<br/>
-  </p>
-	<%= f.label :ends_on, 'Due date' %>
-	<%= f.date_field :ends_on %>
-  </p>
-	<br/>
-	<p>
-	<%= f.submit 'Add item' %>  |  <%= link_to 'Cancel', items_path %>  
-  </p>
-<% end %>
-
+	
