Added http authenticate and fixed verbiage for error message in new and edit files.

--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -7,7 +7,7 @@
 	  	<h2>
 	  		<%= pluralize(@item.errors.count, "error") %>
 prohibited
-        this article from being saved:
+        this item from being saved:
        </h2>
        <ul>
          <% @item.errors.full_messages.each do |msg| %>
