Added Users controller and route to welcome page for signup link.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Welcome to mySecond</h1>
+
 <p>Where you can set up a list of important things in your daily life that you may need a 'Second', someone else, to take care of for you in case of your emergency.</p>
+
+<%= link_to "Sign up now!", signup_path %>
