--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,30 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+  <h1>Sign up</h1>
+
+<%= form_for @user do |f| %>
+
+	<% if @user.errors.any? %>
+	  <div id="error_explanation">
+		  	<h2>
+		  		<%= pluralize(@user.errors.count, "error") %>
+	prohibited
+	        this item from being saved:
+	       </h2>
+	  <ul>
+		  <% @user.errors.full_messages.each do |msg| %>
+		  	<li><%= msg %></li>
+		  <%end %>
+		</ul>
+	<% end %>
+
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+
+  <%= f.submit 'Create account' %>
+<% end %>
+
+
+	
