--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
   <%= f.label :email %>
   <%= f.text_field :email %>
 
-  <%= f.submit 'Create account' %>
+  <%= f.submit 'Create my account' %> | <%= link_to 'Maybe not now', welcome_index_path %>
 <% end %>
 
 
