--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
-<%= @user.name %>, <%= @user.email %>
+<% if flash[:notice] %>
+  <div class-"notice"><%= flash[:notice] %></div>
+<% end %>
+
+<h2><%= "Welcome to your page on the mySecond app #{@user.name}" %></h2>
+<p> Name:  <%= @user.name %></p> 
+<p> Email: <%= @user.email %> </p>
