Added _form for items/new and items/edit.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,4 +6,5 @@
 <p> Name:  <%= @user.name %></p> 
 <p> Email: <%= @user.email %> </p>
 
-<%= link_to 'myList', items_url %> | <%= link_to 'Update profile', edit_user_url %>
+<%= link_to 'Update profile', edit_user_url %> | <%= link_to 'myList', items_url %>
+
