--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,5 +13,4 @@
 	<%= @item.ends_on %>
 </p>
 
-<%= link_to 'Back', items_path %> |
-<%= link_to 'Edit', edit_item_path(@item) %>
+<%= link_to 'Edit', edit_item_path(@item) %> | <%= link_to 'Back to list', items_path %>
