Added password_digest, password features and tested sign up functionality.

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -5,8 +5,7 @@
 	  <div id="error_explanation">
 	  	<h2>
 	  		<%= pluralize(@item.errors.count, "error") %>
-prohibited
-        this item from being saved:
+prohibited this item from being saved:
        </h2>
        <ul>
          <% @item.errors.full_messages.each do |msg| %>
@@ -17,7 +16,7 @@ prohibited
   <% end %>
 
   <p>
-	<%= f.label :name %>
+	<%= f.label :name, 'Item name' %>
 	<%= f.text_field :name %>
   </p>
 	<br/>
