--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,13 +16,26 @@
 		  <%end %>
 		</ul>
 	<% end %>
-
+  <p>
   <%= f.label :name %>
   <%= f.text_field :name %>
-
+  </p>
+  <br />
+  <p>
   <%= f.label :email %>
   <%= f.text_field :email %>
-
+  </p>
+  <br />
+  <p>
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+  </p>
+  <br />
+  <p>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation %>
+  </p>
+  <br />
   <%= f.submit 'Create my account' %> | <%= link_to 'Maybe not now', welcome_index_path %>
 <% end %>
 
