--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class-"notice"><%= flash[:notice] %></div>
 <% end %>
 
-<h2><%= "Welcome to your profile page on the mySecond app #{@user.name}" %></h2>
+<h2><%= "Welcome to your profile page on the mySecond app #{@user.name}!" %></h2>
 <p> Name:  <%= @user.name %></p> 
 <p> Email: <%= @user.email %> </p>
 
