--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,16 @@
-<header>
-	<%= link_to "mySecond app", welcome_index_path %>
-	<nav>
-		<ul>
-			<li><%= link_to "Home", welcome_index_path %></li>
-			<% if logged_in? %>
-			  <li><%= link_to "Profile", current_user %></li>
-			  <li><%= link_to "Sign out", logout_path, method: "delete" %></li>
-			<% else %>
-			  <li><%= link_to "Sign in", login_path %></li>
-			<% end %>
-		</ul>
-	</nav>
+<header class="navbar navbar-fixed-top navbar-inverse">
+	<div class="container">
+	  <%= link_to "mySecond app", welcome_index_path, id: "logo" %>
+		<nav>
+			<ul class="nav navbar-nav navbar-right">
+				<li><%= link_to "Home", welcome_index_path %></li>
+				<% if logged_in? %>
+				  <li><%= link_to "Profile", current_user %></li>
+				  <li><%= link_to "Sign out", logout_path, method: "delete" %></li>
+				<% else %>
+				  <li><%= link_to "Sign in", login_path %></li>
+				<% end %>
+			</ul>
+		</nav>
+	</div>
 </header>
