--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,8 @@
-<h1>Welcome to mySecond</h1>
+<div class="center jumbotron">
+	<h1>Welcome to mySecond</h1>
+	<h4>
+		Where you can set up a list of important things in your daily life that you may need a 'Second', someone else, to take care of in case of your emergency.
+	</h4>
 
-<p>Where you can set up a list of important things in your daily life that you may need a 'Second', someone else, to take care of for you in case of your emergency.</p>
-
-<%= link_to "Get started now!", signup_path %>
+	<%= link_to "Get started now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
