Added user_mailer feature. Welcome email sent on signup.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,7 +34,7 @@
   </p>
   
 	<p>
-  <%= f.submit 'Save changes' %> | <%= link_to 'Cancel', @user %>
+  <%= f.submit 'Save changes' %> | <%= button_to 'Cancel', @user %>
   </p>
 <% end %>
 
