--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class-"notice"><%= flash[:notice] %></div>
 <% end %>
 
-<h2><%= "Welcome to your profile page on the mySecond app #{current_user.name}!" %></h2>
+<h2><%= "This is your profile page on the mySecond app #{current_user.name}!" %></h2>
 <p> Name:  <%= current_user.name %></p> 
 <p> Email: <%= current_user.email %> </p>
 
