--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,18 +1,34 @@
-<h1>Item List</h1>
-
-<table>
-	<tr><th>Item</th><th>Decription</th><th>Due Date</th></tr>
-	<% @items.each do |item| %>
-	  <tr>
-	  	<td><%= link_to item.name, item %></td>
-	  	<td><%= item.description%></td>
-	  	<td><%= item.ends_on %></td>
-	  	<td><%= link_to 'Edit', edit_item_path(item) %></td>
-	  	<td><%= link_to 'Delete', item_path(item),
-	  	        method: :delete,
-	  	        data: { confirm: 'Are you sure?' } %></td>
-	  </tr>
-	<% end %>
-</table>
+<% provide(:title, 'Items List') %>
+<div class="col-md-8 col-md-offset-2">
+  <aside class="col-md-4">
+    <section class="user_info">
+    	<h1>Item List</h1>
+    </section>
+  </aside>
+  <div class="panel panel-default">
+		<div class="panel-body">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Item</th><th>Decription</th><th>Date</th>
+					</tr>
+				</thead>
+				<tbody>
+				<% @items.each do |item| %>
+				  <tr>
+				  	<td><%= link_to item.name, item %></td>
+				  	<td><%= item.description%></td>
+				  	<td><%= item.ends_on %></td>
+				  	<td><%= link_to 'Edit', edit_item_path(item) %></td>
+				  	<td><%= link_to 'Delete', item_path(item),
+				  	        method: :delete,
+				  	        data: { confirm: 'Are you sure?' } %></td>
+				  </tr>
+				<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<%= link_to 'Add a new item', new_item_path %>
+</div>
 <br/>
-<%= link_to 'Add a new item', new_item_path %>
