--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,11 @@
 		<%= render 'layouts/header' %>
 		</header>
 		<div class="container">
+			<% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
 		  <%= yield %>
-		  <%= render 'layouts/footer' %>
 		</div>
+		<%= render 'layouts/footer' %>
 	</body>
 </html>
