--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,43 +1,27 @@
 <% provide(:title, 'Sign up') %>
-  <h1>Sign up</h1>
+<h1>Sign up</h1>
 
-<%= form_for @user do |f| %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for @user do |f| %>
+      <%= render 'shared/error_messages' %>
 
-	<% if @user.errors.any? %>
-	  <div id="error_explanation">
-		  	<h2>
-		  		<%= pluralize(@user.errors.count, "error") %>
-	prohibited
-	        this item from being saved:
-	       </h2>
-	  <ul>
-		  <% @user.errors.full_messages.each do |msg| %>
-		  	<li><%= msg %></li>
-		  <%end %>
-		</ul>
-	<% end %>
-  <p>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  </p>
-  <br />
-  <p>
-  <%= f.label :email %>
-  <%= f.email_field :email %>
-  </p>
-  <br />
-  <p>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  </p>
-  <br />
-  <p>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-  </p>
-  <br />
-  <%= f.submit 'Create my account' %> | <%= link_to 'Maybe not now', welcome_index_path %>
-<% end %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+      
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+      
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+      
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <br />
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 
 
-	
+  
