--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,6 +23,24 @@ textarea {
   margin-bottom: 10px;
 }
 
+
+/* forms */
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
+
 /* printing */
 
 h1, h2, h3, h4, h5, h6 {
@@ -37,6 +55,13 @@ h1 {
 }
 
 h2 {
+	font-size: 2em;
+	letter-spacing: -2px;
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+h3 {
 	font-size: 1.2em;
 	letter-spacing: -1px;
 	margin-bottom: 30px;
@@ -96,5 +121,5 @@ footer ul {
 
 footer ul li {
   float: left;
-  margin-left: 15px;
+  margin-left: 10px;
 }
