--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,34 +1,21 @@
+<% provide(:title, 'Item') %>
 
-<%= form_for @item do |f| %>
-	
-	<% if @item.errors.any? %>
-	  <div id="error_explanation">
-	  	<h2>
-	  		<%= pluralize(@item.errors.count, "error") %>
-prohibited this item from being saved:
-       </h2>
-       <ul>
-         <% @item.errors.full_messages.each do |msg| %>
-           <li><%= msg %></li>
-         <% end %>
-       </ul>
-    </div>
-  <% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+		<%= form_for @item do |f| %>
+      <%= render 'shared/error_item_messages' %>
 
-  <p>
-	<%= f.label :name, 'Item name' %>
-	<%= f.text_field :name %>
-  </p>
-	<p>
-	<%= f.label :description %>
-	<%= f.text_area :description %>
-  </p>
-  </p>
-	<%= f.label :ends_on, 'Due date' %>
-	<%= f.date_field :ends_on %>
-  </p>
-	<p>
-	<%= f.submit %>  |  <%= link_to 'Cancel', items_path %>  
-  </p>
-<% end %>
-
+			<%= f.label :name, 'Item name' %>
+			<%= f.text_field :name, class: 'form-control' %>
+		  
+			<%= f.label :description %>
+			<%= f.text_area :description, class: 'form-control' %>
+		  
+			<%= f.label :ends_on, 'Due date' %>
+			<%= f.date_field :ends_on, class: 'form-control' %>
+		  <br />
+			<%= f.submit %>  |  <%= link_to 'Cancel', items_path %>  
+		  
+		<% end %>
+	</div>
+</div>
