--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,40 +1,26 @@
-<h1>Update your profile</h1>
+<% provide(:title, 'Update your profile') %>
+<h2>Update your profile</h2>
 
-<%= form_for :user, url: user_path(@user), method: :patch do |f| %>
-	
-	<% if @user.errors.any? %>
-	  <div id="error_explanation">
-	  	<h2>
-	  		<%= pluralize(@user.errors.count, "error") %>
-        prohibited this user from being saved:
-       </h2>
-       <ul>
-         <% @user.errors.full_messages.each do |msg| %>
-           <li><%= msg %></li>
-         <% end %>
-       </ul>
-    </div>
-  <% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+        
+    <%= form_for :user, url: user_path(@user), method: :patch do |f| %>
+    	<%= render 'shared/error_messages' %>
 
-  <p>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
-  </p>
-	<p>
-	<%= f.label :email %>
-	<%= f.text_field :email %>
-  </p>
-  <p>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  </p>
-  <p>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-  </p>
-  
-	<p>
-  <%= f.submit 'Save changes' %> | <%= button_to 'Cancel', @user %>
-  </p>
-<% end %>
-
+    	<%= f.label :name %>
+    	<%= f.text_field :name, class: 'form-control' %>
+      
+    	<%= f.label :email %>
+    	<%= f.text_field :email, class: 'form-control' %>
+      
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+      
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <br />
+      <%= f.submit 'Save changes' %> | <%= button_to 'Cancel', @user %>
+     
+    <% end %>
+  </div>
+</div>
