Added second_user invite_token capabilities flow from session login to first_users items page.

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,7 @@
 <div class="col-md-8 col-md-offset-2">
   <aside class="col-md-4">
     <section class="user_info">
-    	<h2>Item List</h2>
+    	<h2>Items List</h2>
     </section>
   </aside>
   <div class="panel panel-default">
