Minor changes. Added .DS_Store to .gitignore.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,13 @@
 <footer class="footer">
-  <small>
-    Life happens ... be prepared!
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-    </ul>
-  </nav>
+	<div class="container">
+	  <small>
+	    Life happens ... be prepared!
+	  </small>
+	  <nav>
+	    <ul>
+	      <li><%= link_to "About",   '#' %></li>
+	      <li><%= link_to "Contact", '#' %></li>
+	    </ul>
+	  </nav>
+	</div>
 </footer>
