--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
 	<h1>Welcome to mySecond</h1>
 	<h4>
-		Where you can set up a list of important things in your daily life that you may need a 'Second', someone else, to take care of in case of your emergency.
+		Where you can set up a list of important things in your daily life that you may need someone else, a 'Second', to take care of in case of your emergency.
 	</h4>
 
 	<%= link_to "Get started now!", signup_path, class: "btn btn-lg btn-primary" %>
