--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,9 @@
 	  <%= link_to "mySecond app", welcome_index_path, id: "logo" %>
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
-				<li><%= link_to "Home", welcome_index_path %></li>
+				<li><%= link_to "New Item", new_item_path %></li>
 				<% if logged_in? %>
-				  <li><%= link_to "Profile", current_user %></li>
+				  <li><%= link_to "Account", current_user %></li>
 				  <li><%= link_to "Sign out", logout_path, method: "delete" %></li>
 				<% else %>
 				  <li><%= link_to "Sign in", login_path %></li>
