--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,15 +43,16 @@
 				  </tr>
 				</thead>
 				<tbody>
-					
 						<tr>
-							<td><%=  %></td>
-							<td><%=  %></td>
-						  <td></td>
+							<td><%= @user.name %></td>
+							<td><%= @user.email %></td>
+						  <td><%= user_status(current_user) %></td>
 						</tr>
-					
 				</tbody>
 			</table>
+			<tr>
+				<h4>Invite a mySecond user</h4>
+			</tr>
 			<%= render 'form' %>
 		</div>
 	</div>
